# futureauth-sdk

./: Cargo.toml
src/: client.rs  config.rs  error.rs  lib.rs  models.rs
src/axum/: extractor.rs  mod.rs  routes.rs
src/db/: migrations.rs  mod.rs  session.rs  user.rs  verification.rs
