[package]
name = "futureauth"
version = "0.2.0"
edition = "2021"
description = "OTP authentication SDK — local session management with FutureAuth OTP delivery"
license = "MIT"
repository = "https://github.com/ethereumdegen/futureauth-sdk"
keywords = ["auth", "otp", "axum", "authentication"]
categories = ["authentication", "web-programming"]

[features]
default = ["axum-integration"]
axum-integration = ["dep:axum", "dep:axum-extra", "dep:tower", "dep:tower-cookies"]

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
nanoid = "0.4"
rand = "0.8"
thiserror = "2"
tracing = "0.1"

# Optional axum integration
axum = { version = "0.8", optional = true }
axum-extra = { version = "0.10", features = ["cookie"], optional = true }
tower = { version = "0.5", optional = true }
tower-cookies = { version = "0.10", optional = true }
